<resources>
    <string name="app_name">AppQuiz</string>
    <string name="quiz">Quiz</string>
    <string name="question">Question :</string>
    <string name="score">Score :</string>
    <string name="start">Start</string>
    <string name="reset_score">Reset Score</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>